<resources>
    <string name="app_name">HonestGram</string>
    <string name="input_login">Введите логин или email</string>
    <string name="input_password">Введите пароль</string>
    <string name="lbl_amount">Сумма</string>
    <string name="lbl_ccy">Валюта</string>
    <string name="lbl_email">Почта</string>
    <string name="lbl_description">Описание</string>
    <string name="btn_pay">Оплатить</string>

    <string name="facebook_app_id">200908440656852</string>
    <string name="fb_login_protocol_scheme">fb200908440656852</string>

    <string name="btn_simple_example">Simple Example</string>
    <string name="btn_flexible_example">Flexible Example</string>

    <string name="e_invalid_amount">Invalid amount</string>
    <string name="e_invalid_email">Invalid email</string>
    <string name="e_invalid_description">Enter description</string>

    <string name="wait_loading">Ожидайте&#8230;</string>
    <string name="network_disable_error">Отсутствует связь с сервером</string>
    <string name="go_exit">Для выхода нажмите еще раз</string>
    <string name="menu_title">Меню</string>
    <string name="exit">Выйти</string>

    <!-- Main Menu-->
    <string name="product">Товары</string>
    <string name="about">О компании</string>
    <string name="cities_and_hoods">Города, районы</string>
    <string name="chats">Диалоги</string>
    <string name="share">Поделиться</string>
    <string name="enter_in_application">Войти в приложение</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="forgotPassword">Забыл пароль</string>
    <string name="empty_fields">Необходимо заполнить все поля</string>
    <string name="found">Найден</string>
    <string name="not_found">Не найден</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_authorization">Авторизоваться</string>
    <string name="menu_main_page">Главная страница</string>
    <string name="menu_map">Карта</string>
    <string name="already_exist">Пользователь с таким логином уже существует</string>
    <string name="to_registration">Зарегистрироваться</string>
    <string name="input_password_again">Введите пароль повторно</string>
    <string name="input_nickname">Введите псевдоним</string>
    <string name="add_dialog">Добавить диалог</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="attention">Внимание</string>
    <string name="choose_companion">Выберите собеседника</string>
    <string name="ok">Ок</string>
    <string name="cancel">отмена</string>
    <string name="opened_conversation">С вами открыта беседа</string>
    <string name="you_write">Вы :</string>
    <string name="companion_write">Собеседник :</string>
    <string name="success">Успешно обновлено</string>
    <string name="success_registration">Регистрация прошла успешно</string>
    <string name="gps_permission">Ваш GPS кажется отключен, не желаете включить его?</string>
    <string name="necessary_gps">Необходимо включить геоданные</string>

  <!--  <!DOCTYPE resources [
    <!ENTITY foo "pertenk">
    ]>

    <string name="busy_warning">Sorry, &foo; is working hard, please try again in a moment.</string>
    <string name="trademark">&foo; is a registered trademark, all rights reserved.</string>
-->
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="input_mobile">Введите номер мобильного телефона</string>
    <string name="choose_city">Выберите город</string>
    <string name="input_interesting_products">Введите интересущие вас продукты</string>
    <string name="apply_edits">Применить изменения</string>

    <string name="special_price">Special price :</string>
    <string name="concrete_price">%d UAH</string>
    <string name="checkout">Оформить заказ</string>
    <string name="success_add_to_cart">Успешно добавлено в корзину</string>
    <string name="add_product">Добавить товар</string>
    <string name="tracking">Слежение</string>
    <string name="users_dialogs">Пользовательские диалоги</string>
    <string name="products_dialogs">Диалоги по товарам</string>
    <string name="no_meetings">Диалогов пока что нет, добавьте собеседника</string>
    <string name="new_conversation">Новая беседа</string>
    <string name="ship_product">Отгрузить товар</string>
    <string name="add_photo">Добавить фото</string>
    <string name="input_price">Введите цену</string>
    <string name="input_description">Введите описание товара</string>
    <string name="empty_photo">Необходимо добавить фото</string>
    <string name="input_title">Введите название товара</string>
    <string name="success_add_product">Товар успешно добавлен</string>
    <string name="filter_by_city">Сортировать по городам</string>
    <string name="filter_by_price">Сортировать по цене</string>
    <string name="choice_product_to_ship">Выберите товар для отгрузки</string>
    <string name="search_hint">Введите для быстрого поиска</string>
    <string name="shipped_orders">Отгруженные товары</string>
    <string name="before_dispatch_take_photo">Перед отправкой сделайте фото</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="order_there">Отгрузка произведена здесь</string>


</resources>
