<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/saffron">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatarProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/unknown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nickname"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:hint="@string/input_nickname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatarProfile"

            />

        <!--<Spinner
            android:id="@+id/cities"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatarProfile"
            app:layout_constraintTop_toBottomOf="@id/nickname"
            />-->

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_button_color_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatarProfile"
            app:layout_constraintTop_toBottomOf="@id/nickname">

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/cities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:singleLine="true"
                app:ms_alignLabels="false"
                app:ms_arrowColor="@android:color/darker_gray"
                app:ms_arrowSize="10dp"
                app:ms_floatingLabelText="@string/choose_city"
                app:ms_hint="@string/choose_city"
                app:ms_multiline="false" />
        </RelativeLayout>

        <EditText
            android:id="@+id/mobile"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/input_mobile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatarProfile" />

        <EditText
            android:id="@+id/interesting"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/input_interesting_products"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mobile" />
    </android.support.constraint.ConstraintLayout>


    <TextView
        android:id="@+id/apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_text_view"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/apply_edits"
        android:textColor="@android:color/white"
        android:textSize="@dimen/x_big_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />


</android.support.constraint.ConstraintLayout>