<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/switcherLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingBottom="@dimen/default_padding"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding">

        <RadioGroup
            android:id="@+id/dialogsSwitcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_switch_background"
            android:checkedButton="@+id/created_by_my_switch"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/usersDialogs"
                style="@style/customSwitchStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="-1dp"
                android:layout_weight="1"
                android:text="@string/users_dialogs" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/separator_gray" />

            <RadioButton
                android:id="@+id/productsDialogs"
                style="@style/customSwitchStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-1dp"
                android:layout_marginRight="-1dp"
                android:layout_weight="1"
                android:text="@string/products_dialogs" />


        </RadioGroup>

    </LinearLayout>

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switcherLayout">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/no_meetings" />
    </ViewFlipper>

</android.support.constraint.ConstraintLayout>